--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.108.3",
+    "@react-three/fiber": "^8.16.8",
+    "framer-motion": "^11.3.2",
+    "maath": "^0.10.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-color": "^2.19.3",
+    "react-dom": "^18.3.1",
+    "three": "^0.166.1",
+    "valtio": "^1.13.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
